--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,23 @@
 Package: ViViBancaPkg
 Type: Package
+Date: 2022-12-06
 Title: Pacchetto di lavoro per basi dati ViViBanca S.p.A.
 Version: 0.0.1.0
+Author: Vittorio Zuccala <vittorio.zuccala@vivibanca.it>
+Maintainer: Vittorio Zuccala <vittorio.zuccala@vivibanca.it>
 RoxygenNote: 7.2.2
+Description: Pacchetto per le funzioni ViViBanca S.p.A.
+Depends:
+    R (>= 2.15),
+    qtl (>= 1.30-4)
+Imports:
+    yaml,
+    utils
+Suggests:
+    knitr,
+    devtools,
+    roxygen2,
+    testthat
+License: MIT + file LICENSE
+URL: https://www.vivibanca.it
+VignetteBuilder: knitr
