--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,10 @@ Description: Pacchetto per le funzioni ViViBanca S.p.A.
 Depends:
     R (>= 2.15),
     yaml,
+    dplyr,
     purrr,
     stringr,
-    stringi,
-    qtl (>= 1.30-4)
+    stringi
 Imports:
     utils
 Suggests:
