--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(accorpa_AAMMGG)
 export(connessione_as400)
 export(definisci_data)
+export(estrai_tabella_customer_satisfaction)
 export(leggi_configurazione)
 export(riprogramma_testo)
 import(RODBC)
