Inserisco estrai tabella geuty400f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(accorpa_AAMMGG)
 export(connessione_as400)
 export(definisci_data)
 export(estrai_tabella_customer_satisfaction)
+export(estrai_tabella_geuty400f)
 export(leggi_configurazione)
 export(riprogramma_testo)
 import(RODBC)
