--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(connessione_as400)
 export(definisci_data)
 export(estrai_tabella_customer_satisfaction)
 export(estrai_tabella_geuty400f)
+export(estrai_tabella_reclami)
 export(leggi_configurazione)
 export(riprogramma_testo)
 import(RODBC)
