Aggiunta vignette Modifica Pacchetto

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,6 @@ pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   2022-12-06_CreazionePacchetto: 2022-12-06_CreazionePacchetto.html
-last_built: 2022-12-07T11:33Z
+  2022-12-07_ModificaPacchetto: 2022-12-07_ModificaPacchetto.html
+last_built: 2022-12-07T13:42Z
 
