Aggiunta vignette Cartelle

--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,7 @@ pkgdown_sha: ~
 articles:
   2022-12-06_CreazionePacchetto: 2022-12-06_CreazionePacchetto.html
   2022-12-07_ModificaPacchetto: 2022-12-07_ModificaPacchetto.html
-last_built: 2022-12-07T13:42Z
+  2022-12-08_FunzioniContenute: 2022-12-08_FunzioniContenute.html
+  2022-12-09_Sistema_di_cartelle: 2022-12-09_Sistema_di_cartelle.html
+last_built: 2022-12-07T13:51Z
 
