Aggiunta estrai_restfopecq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(definisci_data)
 export(estrai_tabella_customer_satisfaction)
 export(estrai_tabella_geuty400f)
 export(estrai_tabella_reclami)
+export(estrai_tabella_restfopecq)
 export(leggi_configurazione)
 export(riprogramma_testo)
 import(RODBC)
