Aggiunta estrazione iSal e utcre

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,10 @@ export(connessione_as400)
 export(definisci_data)
 export(estrai_tabella_customer_satisfaction)
 export(estrai_tabella_geuty400f)
+export(estrai_tabella_isal)
 export(estrai_tabella_reclami)
 export(estrai_tabella_restfopecq)
+export(estrai_tabella_utcre001w2)
 export(leggi_configurazione)
 export(riprogramma_testo)
 import(RODBC)
